# aoc

day1/src/: main.rs
day10/day10master/: Cargo.toml
day10/day10master/src/: main.rs
day10/day10test/: Cargo.toml  index.html
day10/day10test/src/: lib.rs  main.rs
day11/day11master/: Cargo.toml
day11/day11master/src/: main.rs
day11/day11test/: Cargo.toml
day11/day11test/src/: main.rs  parse.rs
day12/day12master/: Cargo.toml
day12/day12master/src/: main.rs
day12/day12test/: Cargo.toml  index.html  justfile
day12/day12test/src/: lib.rs  main.rs
day12/day13/day13master/: Cargo.toml
day12/firsttry/: index.html
day12/firsttry/pkg/: day12test.js  day12test_bg.wasm
day13/day13test/: Cargo.toml
day13/day13test/src/: main.rs
day14/day14master/: Cargo.toml
day14/day14master/src/: main.rs
day14/day14test/: Cargo.toml  index.html
day14/day14test/src/: lib.rs  main.rs
day16/day16test/: Cargo.toml  callgrind.out.233492  justfile
day17/day17test/: Cargo.toml
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day5/itertools/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7a/: Cargo.toml
day7a/src/: main.rs
day7short/: Cargo.toml
day7short/src/: main.rs
day7stackallocated/: Cargo.toml
day7stackallocated/src/: main.rs
day8atest/: Cargo.toml  rust-toolchain.toml
day8atest/src/: grid.rs  main.rs
day8master/: Cargo.toml
day8master/src/: main.rs
day9/day9master/: Cargo.toml
day9/day9test/: Cargo.toml
(+101 files in other folders)
