[package]
name = "day14test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
js-sys = "0.3.61"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"] }

[lib]
crate-type = ["lib", "cdylib"]